<resources>
    <string name="app_name">Quest4Run</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="value_with_plus_label">+%d</string>
    <string name="money_label">%d &#162;</string>
    <string name="empty_list">Nessun elemento da mostrare</string>
    <string name="loading">Caricamento&#8230;</string>
    <string name="yes">Sì</string>
    <string name="cancel">Annulla</string>
    <string name="default_layout_placeholder">TextView</string>
    <string name="default_layout_placeholder_single_digit">0</string>
    <string name="content_description_app_icon">Icona App</string>
    <string name="content_description_icon">Icona</string>
    <string name="content_description_arrow_left">Freccia sx</string>
    <string name="content_description_arrow_right">Freccia dx</string>
    <string name="content_description_sword">Spada</string>
    <string name="content_description_shield">Scudo</string>
    <string name="content_description_wand">Bacchetta</string>
    <string name="nav_run">Corsa</string>
    <string name="nav_path">Ultima attività</string>
    <string name="nav_task">Obiettivi</string>
    <string name="nav_character">Personaggio</string>
    <string name="nav_quest">Missioni</string>
    <string name="nav_shop">Negozio</string>
    <string name="nav_about_us">Chi siamo</string>
    <string name="nav_faq">Faq</string>
    <string name="comincini_name_value">Daniele Comincini</string>
    <string name="micheli_name_value">Gianmaria Micheli</string>
    <string name="release_year">2017</string>
    <string name="title_alert_start">Benvenuto/a!</string>
    <string name="content_alert_start">Benvenuto/a in Quest4Run! Per cominciare inizia subito a creare i tuoi obbiettivi e parti per la corsa! Per informazioni più dettagliate sulle varie sezioni, consulta le Faq. Buon divertimento!</string>
    <string name="faq_title">Domande Frequenti</string>
    <string name="faq1_question">1 - Cos\'è Quest4Run?</string>
    <string name="faq1_answer">Quest4Run è un\'applicazione che ti consente di correre divertendoti! Stabilisci i tuoi obbiettivi e sviluppa il tuo personaggio, migliorandone le statistiche e affrontando via via le varie missioni disponibili.
    </string>
    <string name="faq2_question">2 - Come si usa?</string>
    <string name="faq2_answer">È molto semplice! Dal menù laterale naviga tra le varie sezioni dell\'applicazione per scoprire le fantastiche funzioni fornite. Se vuoi subito iniziare ad allenarti, vai su Corsa e inizia subito la tua sessione!
    </string>
    <string name="faq3_question">3 - Corsa</string>
    <string name="faq3_answer">In questa schermata potrai effettuare l\'allenamento vero e proprio. Ti basterà premere il bottone \"START\" per iniziare subito il tuo allenamento e visualizzare delle statistiche in merito! Alla fine della corsa basterà premere il tasto \"STOP\" per ottenere le ricompense degli obbiettivi completati.
    </string>
    <string name="faq4_question">4 - Ultima Attività</string>
    <string name="faq4_answer">Puoi comodamente visualizzare l\'ultimo percorso seguito durante l\'allenamento, insieme a delle statistiche sulla performance.
    </string>
    <string name="faq5_question">5 - Obbiettivi</string>
    <string name="faq5_answer">Prima di allenarti devi stabilire degli obbiettivi di allenamento! Puoi comodamente crearli premendo il bottone \"+\".
    Puoi scegliere tra 4 diversi tipi di obbiettivi:
    \n- Distanza: quanto si vuole percorrere allenandosi. I progressi si accumulano durante le varie sessioni di corsa;
    \n- Velocità media: la velocità media da mantenere durante la sessione di corsa corrente;
    \n- Costanza: numero di giorni di fila in cui si effettua una corsa;
    \n- Durata: quanto si vuole correre in termini di tempo.
    \n \n Gli obbiettivi possono essere attivati o disattivati, a seconda di quali si voglia completare.
    Nel caso in cui sia completato un obbiettivo, questo sarà visibile nella scheda \"Obbiettivi Completati\", accessibile dal menù in alto a destra.
    Completando gli Obbiettivi si potranno ottenere le monete necessarie a comprare nuovi equipaggiamenti.</string>
    <string name="faq6_question">6 - Personaggio</string>
    <string name="faq6_answer">Puoi visualizzare le statistiche del tuo personaggio man mano che queste migliorano!
    Cliccando sulle icone di Spada, Scudo e Scettro potrai visualizzare gli equipaggiamenti disponibili per il tuo personaggio e scegliere quelli che preferisci.</string>
    <string name="faq7_question">7 - Missioni</string>
    <string name="faq7_answer">Man mano che le statistiche del tuo personaggio aumentano, potrai accedere a diverse Missioni. Attiva una missione per far partire il timer del suo completamento. Alla fine otterrai la ricompensa in punti esperienza.
    Puoi attivare solo una missione alla volta. Le missioni completate sono visibili nella scheda \"Missioni Completate\", accessibile dal menù in alto a destra.
    Cliccando sulla singola missione sarà possibile vedere la scheda di dettaglio della missione selezionata.</string>
    <string name="faq8_question">8 - Shop</string>
    <string name="faq8_answer">Completando gli obbiettivi otterrai delle monete da poter spendere in equipaggiamenti sempre più potenti! A seconda del livello del tuo personaggio avrai accesso o meno all\'acquisto di determinati oggetti.</string>
    <string name="faq9_question">9- Notifiche</string>
    <string name="faq9_answer">Temi di dimenticarti di una Missione in corso? Niente paura! Alla scadere del tempo ti arriverà una comoda notifica per non perdere neanche un istante e continuare a giocare!</string>
    <string name="task_fragment_title">I tuoi obiettivi</string>
    <string name="menu_complete">Completa</string>
    <string name="menu_delete">Cancella</string>
    <string name="task_delete">Obiettivo rimosso</string>
    <string name="percentage_label">%d%%</string>
    <string name="delete_all_task">Cancella tutto</string>
    <string name="delete_all_task_confirmation">Sei sicuro di voler cancellare tutti gli obiettivi?</string>
    <string name="number_task_deleted">Rimossi %d obiettivi</string>
    <string name="show_history_task">Obiettivi Completati</string>
    <string name="task_creation_alert_title">Crea i tuoi Obbiettivi!</string>
    <string name="task_creation_alert_text">Crea i tuoi obbiettivi per rendere efficace il tuo allenamento!
    Puoi scegliere 4 tipi di obbiettivi: Distanza, Velocità Media, Costanza e Durata; seleziona quindi il traguardo
    e la ricompensa da ottenere. Per maggiori dettagli, consulta la sezione Faq.</string>
    <string name="name_hint">Nome</string>
    <string name="spinner_task_type_label">Seleziona il tipo di obiettivo</string>
    <string name="spinner_task_goal_label">Seleziona il traguardo</string>
    <string name="spinner_task_reward_label">Seleziona la ricompensa</string>
    <string name="btn_add_label">Crea</string>
    <string name="add_task_activity_title">Crea obiettivo</string>
    <string-array name="task_type">
        <item>Distanza</item>
        <item>Velocità Media</item>
        <item>Costanza</item>
        <item>Durata</item>
    </string-array>
    <string-array name="task_distance_goal">
        <item>1 Km</item>
        <item>5 Km</item>
        <item>10 Km</item>
    </string-array>
    <string-array name="task_rithm_goal">
        <item>1 m/s</item>
        <item>2 m/s</item>
        <item>5 m/s</item>
    </string-array>
    <string-array name="task_constance_goal">
        <item>2 giorni</item>
        <item>3 giorni</item>
        <item>5 giorni</item>
    </string-array>
    <string-array name="task_duration_goal">
        <item>10 minuti</item>
        <item>30 minuti</item>
        <item>60 minuti</item>
    </string-array>
    <string-array name="task_distance_reward">
        <item>5 &#162;</item>
        <item>10 &#162;</item>
        <item>30 &#162;</item>
    </string-array>
    <string-array name="task_rithm_reward">
        <item>5 &#162;</item>
        <item>10 &#162;</item>
        <item>15 &#162;</item>
    </string-array>
    <string-array name="task_constance_reward">
        <item>5 &#162;</item>
        <item>20 &#162;</item>
        <item>50 &#162;</item>
    </string-array>
    <string-array name="task_duration_reward">
        <item>5 &#162;</item>
        <item>10 &#162;</item>
        <item>25 &#162;</item>
    </string-array>
    <string-array name="task_icons">
        <item>ic_road_variant_grey600_36dp</item>
        <item>ic_speedometer_grey600_36dp</item>
        <item>ic_calendar_range_grey600_36dp</item>
        <item>ic_timer_grey600_36dp</item>
    </string-array>
    <string name="task_added">Obiettivo aggiunto</string>
    <string name="name_empty_task_error">Inserire il nome dell\'obiettivo</string>
    <string name="title_new_game">Benvenuto/a!</string>
    <string name="text_new_game">Crea il tuo personaggio per iniziare subito ad allenarti e giocare con Quest4Run!
            Scegli nome, genere e avatar e sei pronto per cominciare!</string>
    <string name="name_empty_character_error">Inserire il nome del personaggio</string>
    <string name="gender_selection_question">Scegli il genere:</string>
    <string name="gender_male">Maschio</string>
    <string name="gender_female">Femmina</string>
    <string-array name="gender">
        <item>@string/gender_male</item>
        <item>@string/gender_female</item>
    </string-array>
    <string name="default_female_avatar_tag">f_0</string>
    <string-array name="female_avatar_tag">
        <item>@string/default_female_avatar_tag</item>
        <item>f_1</item>
        <item>f_2</item>
    </string-array>
    <string name="default_male_avatar_tag">m_0</string>
    <string-array name="male_avatar_tag">
        <item>@string/default_male_avatar_tag</item>
        <item>m_1</item>
        <item>m_2</item>
    </string-array>
    <string name="character_wallet_label">Monete</string>
    <string name="character_stats_label">Statistiche</string>
    <string name="character_level_label">Livello</string>
    <string name="inventory_attack">Inventario attacco</string>
    <string name="inventory_defense">Inventario difesa</string>
    <string name="inventory_magic">Inventario magia</string>
    <string name="request_remove_quest_unequipping">Togliere l\'equipaggiamento disattiverà la missione %s, vuoi continuare?</string>
    <string name="request_change_quest_unequipping">Cambiare l\'equipaggiamento disattiverà la missione %s, vuoi continuare?</string>
    <string name="request_equip_quest_unequipping">Equipaggiare l\'equipaggiamento disattiverà la missione %s, vuoi continuare?</string>
    <string-array name="equipment_icons">
        <item>ic_sword_grey600_36dp</item>
        <item>ic_shield_half_full_grey600_36dp</item>
        <item>ic_auto_fix_grey600_36dp</item>
    </string-array>
    <string name="attack_label">Attacco</string>
    <string name="defense_label">Difesa</string>
    <string name="magic_label">Magia</string>
    <string name="buy_button_label">Compra</string>
    <string name="bought_label">Comprato</string>
    <string name="buy_confirmation">Vuoi acquistare %1$s per %2$d &#162; ?</string>
    <string name="shop_min_level">Lv. %d</string>
    <string name="exp_label">%d EXP</string>
    <string name="request_change_active_quest">Missione %s attiva, vuoi cambiarla?</string>
    <string name="request_deactive_quest">Vuoi disattivare questa Missione?</string>
    <string name="impossible_active_quest">Statistiche troppo basse, impossibile attivare la Missione</string>
    <string name="show_history_quest">Missioni Completate</string>
    <string name="menu_quest_detail">Dettagli</string>
</resources>