<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" android:id="@+id/group_run">
        <item
            android:id="@+id/nav_run"
            android:icon="@drawable/ic_directions_run_black_24dp"
            android:title="@string/nav_run" />
        <item
            android:id="@+id/nav_path"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/nav_path" />
        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/nav_task" />
    </group>

    <group android:checkableBehavior="single" android:id="@+id/group_quest">
            <item
                android:id="@+id/nav_character"
                android:icon="@drawable/ic_account_black_24dp"
                android:title="@string/nav_character" />
            <item
                android:id="@+id/nav_quest"
                android:icon="@drawable/ic_sword_cross_black_24dp"
                android:title="@string/nav_quest" />
            <item
                android:id="@+id/nav_shop"
                android:icon="@drawable/ic_shopping_cart_black_24dp"
                android:title="@string/nav_shop" />
    </group>

    <group android:checkableBehavior="single" android:id="@+id/group_share">
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/nav_about_us" />
    </group>

</menu>
