<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.comincini_micheli.quest4run.activity.FaqActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/fab_margin">
            <TextView
                android:id="@+id/title_faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:textColor="@color/black"
                android:text="@string/faq_title"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="4dp"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/faq1_q"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq1_question"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:padding="4dp"
                />
            <TextView
                android:id="@+id/faq1_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq1_answer"
                android:layout_marginBottom="4dp"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/faq2_q"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq2_question"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:padding="4dp"
                />
            <TextView
                android:id="@+id/faq2_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq2_answer"
                android:layout_marginBottom="4dp"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/faq3_q"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq3_question"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:padding="4dp"
                />
            <TextView
                android:id="@+id/faq3_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq3_answer"
                android:layout_marginBottom="4dp"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/faq4_q"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq4_question"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:padding="4dp"
                />
            <TextView
                android:id="@+id/faq4_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq4_answer"
                android:layout_marginBottom="4dp"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/faq5_q"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq5_question"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:padding="4dp"
                />
            <TextView
                android:id="@+id/faq5_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq5_answer"
                android:layout_marginBottom="4dp"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/faq6_q"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq6_question"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:padding="4dp"
                />
            <TextView
                android:id="@+id/faq6_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq6_answer"
                android:layout_marginBottom="4dp"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/faq7_q"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq7_question"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:padding="4dp"
                />
            <TextView
                android:id="@+id/faq7_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq7_answer"
                android:layout_marginBottom="4dp"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/faq8_q"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq8_question"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:padding="4dp"
                />
            <TextView
                android:id="@+id/faq8_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq8_answer"
                android:layout_marginBottom="4dp"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/faq9_q"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq9_question"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:padding="4dp"
                />
            <TextView
                android:id="@+id/faq9_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq9_answer"
                android:layout_marginBottom="4dp"
                android:visibility="gone"
                />
        </LinearLayout>
        <!--<RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/fab_margin">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:textColor="@color/black"
                android:text="@string/faq_title"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="20dp"
                android:text="@string/faq_text" />
        </RelativeLayout>-->
    </ScrollView>
</RelativeLayout>
