<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_create_character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_label"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"/>

    <ImageView
        android:id="@+id/create_character_avatar_img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:tag="@string/default_male_avatar_tag"
        app:srcCompat="@drawable/m_0"/>

    <ImageButton
        android:id="@+id/update_character_right_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        android:layout_marginStart="23dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_arrow_right"
        android:layout_alignBottom="@+id/create_character_avatar_img"
        android:layout_toEndOf="@+id/create_character_avatar_img"/>

    <ImageButton
        android:id="@+id/update_characher_left_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/update_character_right_btn"
        android:layout_marginEnd="23dp"
        android:layout_toStartOf="@+id/create_character_avatar_img"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_arrow_left"/>

    <EditText
        android:id="@+id/create_character_insert_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name_hint"
        android:maxLength="20"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/create_character_gender_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_selection_question"
        android:layout_alignBottom="@+id/radio_gender_selection"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radio_gender_selection"
        android:layout_marginBottom="73dp"
        android:layout_above="@+id/btn_create_character"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/create_character_male_radiobtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_male"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/create_character_female_radiobtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_female"/>
    </RadioGroup>


</RelativeLayout>