<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <android.support.design.widget.TabLayout
        android:id="@+id/shop_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TabItem
            android:id="@+id/shop_attack_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attack_label"/>

        <android.support.design.widget.TabItem
            android:id="@+id/shop_defense_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defense_label"/>

        <android.support.design.widget.TabItem
            android:id="@+id/shop_magic_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/magic_label"/>
    </android.support.design.widget.TabLayout>

    <FrameLayout
        android:id="@+id/fragment_shop_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/shop_tab_layout">

    </FrameLayout>

</RelativeLayout>