<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="5dp">

    <EditText
        android:id="@+id/name_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name_hint"
        android:maxLength="15"
        android:inputType="textPersonName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"/>

    <TextView
        android:id="@+id/task_type_spinner_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name_task"
        android:layout_marginTop="27dp"
        android:text="@string/spinner_task_type_label"
        android:textSize="18sp"/>

    <Spinner
        android:id="@+id/task_type_spinner"
        style="@android:style/Widget.Holo.Light.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/task_type_spinner_label"
        android:layout_marginTop="13dp"/>

    <TextView
        android:id="@+id/task_goal_spinner_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/spinner_task_goal_label"
        android:textSize="18sp"
        android:layout_below="@+id/task_type_spinner"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:id="@+id/task_goal_spinner"
        style="@android:style/Widget.Holo.Light.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/task_goal_spinner_label"
        android:layout_marginTop="14dp"/>

    <TextView
        android:id="@+id/task_reward_spinner_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/spinner_task_reward_label"
        android:textSize="18sp"
        android:layout_below="@+id/task_goal_spinner"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:id="@+id/task_reward_spinner"
        style="@android:style/Widget.Holo.Light.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/task_reward_spinner_label"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/btn_add_label"/>

</RelativeLayout>