<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <ImageView
        android:id="@+id/quest_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description_icon"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />



    <TextView
        android:id="@+id/quest_min_attack_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/quest_icon"
        android:layout_alignBottom="@+id/quest_icon"
        android:text="@string/attack_label" />

    <TextView
        android:id="@+id/quest_min_attack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/quest_min_attack_label"
        android:layout_alignBottom="@+id/quest_icon"
        android:layout_marginStart="5dp"
        android:text="@string/default_layout_placeholder_single_digit" />

    <TextView
        android:id="@+id/quest_min_defense_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/quest_min_attack"
        android:layout_marginStart="20dp"
        android:layout_alignBottom="@+id/quest_icon"
        android:text="@string/defense_label" />

    <TextView
        android:id="@+id/quest_min_defense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_layout_placeholder_single_digit"
        android:layout_alignBottom="@+id/quest_icon"
        android:layout_toEndOf="@+id/quest_min_defense_label"
        android:layout_marginStart="5dp" />

    <TextView
        android:id="@+id/quest_min_magic_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/quest_min_defense"
        android:layout_marginStart="20dp"
        android:layout_alignBottom="@+id/quest_icon"
        android:text="@string/magic_label" />

    <TextView
        android:id="@+id/quest_min_magic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/quest_icon"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/quest_min_magic_label"
        android:text="@string/default_layout_placeholder_single_digit"/>

    <RadioButton
        android:id="@+id/quest_active_radiobutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:focusable="false"/>

    <TextView
        android:id="@+id/quest_exp_reward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="11dp"
        android:layout_toStartOf="@+id/quest_active_radiobutton"
        android:text="@string/default_layout_placeholder"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/quest_icon"
        android:layout_toEndOf="@+id/quest_icon">

        <TextView
            android:id="@+id/quest_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/default_layout_placeholder"
            android:textSize="21sp"/>

        <TextView
            android:id="@+id/quest_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_layout_placeholder"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/quest_title"
            android:layout_marginStart="40dp"/>

    </RelativeLayout>

</RelativeLayout>